@@ -2659,5 +2659,22 @@ or download tarballs for
     </content>
   </item>
 
+  <item>
+    <date>2006-11-27 21:14</date>
+    <title>GNonLin 0.10.6 release</title>
+    <content>
+<p>
+The GStreamer team is proud to announce a new release in the 0.10.x stable
+series of GNonLin.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gnonlin/0.10.6.html">gnonlin</a>,
+or download tarballs for
+<a href="&site;/src/gnonlin/gnonlin-0.10.6.tar.bz2">gnonlin</a>.
+</p>
+    </content>
+  </item>
+
 
 </news>
